# ChargerAplication

./: README.md  main.py  requirements.txt
cpp_app/: BUILD_WINDOWS.md  CMakeLists.txt  can_factory.cpp  can_factory.h  can_iface.h  can_pcan_windows.cpp  can_pcan_windows.h  can_protocol.cpp  can_protocol.h  can_socketcan_linux.cpp  can_socketcan_linux.h  can_worker.cpp  can_worker.h  main.cpp  profiles.cpp  profiles.h  resources.qrc  settings.cpp  settings.h  simulator.cpp  simulator.h
cpp_app/installer/: installer.iss
cpp_app/scripts/: build_installer.ps1  make_dist.ps1
cpp_app/ui/: connection_panel.cpp  connection_panel.h  control_panel.cpp  control_panel.h  graph_panel.cpp  graph_panel.h  log_panel.cpp  log_panel.h  main_window.cpp  main_window.h  telemetry_panel.cpp  telemetry_panel.h  theme.cpp  theme.h
obc_controller/: can_protocol.py  can_worker.py  profiles.py  settings.py  simulator.py
obc_controller/ui/: connection_panel.py  control_panel.py  graph_panel.py  log_panel.py  main_window.py  telemetry_panel.py  theme.py
